knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Night_Shift_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Night_Shift_Bonus__c</fullName>
    <label>Night Shift Bonus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>