knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Night_Shift_Bonus_Count__c.field-meta.xml
<CustomField>
    <fullName>Night_Shift_Bonus_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Shift Bonus Count</label>
    <type>Checkbox</type>
</CustomField>