knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/No_of_Hours_Anticipated_to_Work__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours_Anticipated_to_Work__c</fullName>
    <label>No of Hours Anticipated to Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>