knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/NPPA_EE_Flag__c.field-meta.xml
<CustomField>
    <fullName>NPPA_EE_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPPA EE Flag</label>
    <type>Checkbox</type>
</CustomField>