knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/NPPA_Encounter__c.field-meta.xml
<CustomField>
    <fullName>NPPA_Encounter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract has an NPPA Encounter variable type.</description>
    <label>NPPA Encounter</label>
    <type>Checkbox</type>
</CustomField>