knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <formula>Apttus__FF_Amend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments</label>
    <type>Text</type>
</CustomField>