knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Payroll_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cycle__c</fullName>
    <label>Payroll Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>