knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/PCA_Payments__c.field-meta.xml
<CustomField>
    <fullName>PCA_Payments__c</fullName>
    <label>PCA Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>