knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Preventive_Care_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Care_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preventive Care Agreement (Do Not Use)</label>
    <referenceTo>PreventiveCareAgreement</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>