knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract__c</fullName>
    <label>Previous Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>