knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Primary_Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Title__c</fullName>
    <label>Primary Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>