knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Professional_Title__c.field-meta.xml
<CustomField>
    <fullName>Professional_Title__c</fullName>
    <formula>TEXT(Contract__r.Account.Professional_Title__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Professional Title</label>
    <type>Text</type>
</CustomField>