knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Provider_Contracting_With__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contracting_With__c</fullName>
    <label>Provider Contracting With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>