knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Provider_Signature_Box__c.field-meta.xml
<CustomField>
    <fullName>Provider_Signature_Box__c</fullName>
    <label>Provider Signature Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>