knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Recursive_Merge_Status__c.field-meta.xml
<CustomField>
    <fullName>Recursive_Merge_Status__c</fullName>
    <label>Recursive Merge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APXT_Redlining__Recursive_Merge_Status</valueSetName>
    </valueSet>
</CustomField>