knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Repayment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Terms__c</fullName>
    <label>Repayment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>