knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Requested_Rate__c.field-meta.xml
<CustomField>
    <fullName>Requested_Rate__c</fullName>
    <label>Requested Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>