knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Second_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Second_Installment_Amount__c</fullName>
    <label>Second Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>