knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Service_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Name__c</fullName>
    <label>Service Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>