knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Service_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Name__c</fullName>
    <formula>Healthcare_Practitioner_Facility__r.Account.Service_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Line Name</label>
    <type>Text</type>
</CustomField>