knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Service_Line_Parent__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Parent__c</fullName>
    <label>Service Line Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>