knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Service_Line_Parent_Facility_Names__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Parent_Facility_Names__c</fullName>
    <label>Service Line Parent Facility Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>