knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Name__c</fullName>
    <label>Shift Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>