knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <formula>IF (
  INCLUDES (
    Healthcare_Practitioner_Facility__r.Facility_Title__r.Shift_Type__c,
    &quot;MD/DO&quot;
  ),
  &quot;MD/DO&quot;,
  &quot;NP/PA&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Type</label>
    <type>Text</type>
</CustomField>