knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <formula>Corporate_Entity__r.Provider_Corporate_Signatory__r.FirstName &amp; &quot; &quot; &amp; Corporate_Entity__r.Provider_Corporate_Signatory__r.LastName</formula>
    <inlineHelpText>Signatory Name field from Contract Object</inlineHelpText>
    <label>Corporate Signatory Name</label>
    <type>Text</type>
</CustomField>