knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Title__c</fullName>
    <description>Signatory Title field from Contract Object</description>
    <formula>Corporate_Entity__r.Signatory_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Signatory Title</label>
    <type>Text</type>
</CustomField>