knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Stipend_Position_Uppercase__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Position_Uppercase__c</fullName>
    <formula>UPPER(Stipend_Position__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stipend Position Uppercase</label>
    <type>Text</type>
</CustomField>