knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Stipend_Tier__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Tier__c</fullName>
    <label>Stipend Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>