knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Tele_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Tele_Encounter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract has an Tele Encounter variable type.</description>
    <label>Tele Encounter</label>
    <type>Checkbox</type>
</CustomField>