knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>