knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <formula>TEXT(Contract__r.Account.Visa_Type__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visa Type</label>
    <type>Text</type>
</CustomField>