knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Work_Commitment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Work_Commitment_Frequency__c</fullName>
    <label>Work Commitment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>