knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/wRVU__c.field-meta.xml
<CustomField>
    <fullName>wRVU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>wRVU</label>
    <type>Checkbox</type>
</CustomField>