knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Addendum.recordType-meta.xml
<RecordType>
    <fullName>Addendum</fullName>
    <active>true</active>
    <label>Addendum</label>
</RecordType>