knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Core_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Core_Agreement</fullName>
    <active>true</active>
    <label>Core Agreement</label>
</RecordType>