knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Test_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_type</fullName>
    <active>true</active>
    <label>Test Record type</label>
</RecordType>